# ccjk

./: .clinerules  .codecov.yml  .dockerignore  .env.example  .eslintignore  .eslintrc.json  .gitignore  .npmignore  AGENTS.md  AGENT_TEAMS_IMPLEMENTATION.md  AGENT_UX_IMPLEMENTATION.md  ANNOUNCEMENT_TEMPLATES.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  AUDIT_COMPLETION_CERTIFICATE.md  AUDIT_COMPLETION_REPORT.md  AUDIT_COMPLETION_REPORT.txt  AUDIT_COMPLETION_SUMMARY.md  AUDIT_DOCUMENTATION_INDEX.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_FILES_MANIFEST.txt  AUDIT_FINAL_SUMMARY.md  AUDIT_MASTER_INDEX.md  AUDIT_MCP_MARKETPLACE.md  AUDIT_MCP_MARKETPLACE_COMPLETION.md  AUDIT_MCP_MARKETPLACE_FINAL_REPORT.md  AUDIT_MCP_MARKETPLACE_IMPLEMENTATION.md  AUDIT_MCP_MARKETPLACE_INDEX.md  AUDIT_MCP_MARKETPLACE_SUMMARY.md  AUDIT_MCP_MARKETPLACE_TECHNICAL.md  AUDIT_README.md  CCJK_ARCHITECTURE_EVALUATION.md  CCJK_CLOUD_API.md  CCJK_CLOUD_API_REQUIREMENTS.md  CCJK_CLOUD_API_REQUIREMENTS_V2.md  CCJK_CLOUD_API_REQUIREMENTS_V3.md  CCJK_DEVELOPMENT_PLAN.md  CCJK_PHASE0_AUDIT_CHECKLIST.md  CCJK_PRODUCT_DEV_SPEC.md  CCJK_PRODUCT_MARKET_ANALYSIS.md  (+198 more)
.claude/: index.json
.github/: CI-CD.md  dependabot.yml  release-notes-v12.1.0.md
.serena/: project.yml
assets/: README.md
cloud-backend-api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
docs/: API-REQUIREMENTS.md  API_CLIENT_DOCUMENTATION.md  API_CLIENT_FIXES.md  API_QUICK_REFERENCE.md  C-009-TASK-COMPLETION.md  CLAUDE-NOTES.md  CLIENT_API_DOC.md  (+106 more)
tests/analyzers/fixtures/axum/: Cargo.toml
(+2365 files in other folders)
