[package]
name = "test-rust-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = [ "full" ] }
axum = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
  "postgres",
  "runtime-tokio-native-tls"
] }

[dev-dependencies]
tokio-test = "0.4"
